SMN-84 fixed image overlapping

--- a/home/_home.scss
+++ b/home/_home.scss
@@ -102,7 +102,7 @@ h1 {
   margin: 0px auto 2rem;
   width: 18rem;
 
-  @media screen and (min-width: 31rem) {
+  @media screen and (min-width: 35rem) {
     font-size: 2.75rem;
     width: 27rem;
   }
@@ -115,7 +115,7 @@ h1 {
     margin-right: auto;
     width: 7rem;
     font-size: 1rem;
-    @media screen and (min-width: 31rem) {
+    @media screen and (min-width: 35rem) {
       width: 8rem;
       font-size: 1.25rem;
     }
@@ -133,7 +133,7 @@ h1 {
     background-repeat: no-repeat;
     background-size: contain;
     @include clearfix();
-    @media screen and (min-width: 31rem) {
+    @media screen and (min-width: 35rem) {
       padding: 0;
     }
   }
@@ -141,7 +141,7 @@ h1 {
   p, h2 {
     padding: 0 1rem;
 
-    @media screen and (min-width: 31rem) {
+    @media screen and (min-width: 35rem) {
       padding: 0 2rem;
     }
   }
@@ -154,14 +154,14 @@ h1 {
 
   .left {
     float: none;
-    @media screen and (min-width: 31rem) {
+    @media screen and (min-width: 35rem) {
       text-align: left;
     }
   }
 
   .right {
     float: none;
-    @media screen and (min-width: 31rem) {
+    @media screen and (min-width: 35rem) {
       text-align: right;
     }
   }
@@ -169,7 +169,7 @@ h1 {
   .description {
     width: 100%;
 
-    @media screen and (min-width: 31rem) {
+    @media screen and (min-width: 35rem) {
       width: 60%;
     }
 
@@ -178,13 +178,13 @@ h1 {
     }
 
     &.left {
-      @media screen and (min-width: 31rem) {
+      @media screen and (min-width: 35rem) {
         float: left;
       }
     }
 
     &.right {
-      @media screen and (min-width: 31rem) {
+      @media screen and (min-width: 35rem) {
         float: right;
       }
     }
@@ -194,7 +194,7 @@ h1 {
       position: relative;
       margin: 2rem 0 2rem 0;
 
-      @media screen and (min-width: 31rem) {
+      @media screen and (min-width: 35rem) {
         margin: 3rem 0 3rem 0;
       }
 
@@ -234,21 +234,21 @@ h1 {
       background-position: 2rem -2rem;
       z-index: -1; // So it doesn't go on top of the text
 
-      @media screen and (min-width: 30rem) {
-        background-position: 15rem 0;
+      @media screen and (min-width: 35rem) {
+        background-position: 19rem 0;
         height: 15rem;
       }
 
       @media screen and (min-width: 40rem) and (orientation: landscape) {
-        background-position: 20rem 0;
+        background-position: 22rem 0;
       }
 
-      @media screen and (min-width: 37rem) {
-        background-position: 18rem 0;
+      @media screen and (min-width: 42rem) {
+        background-position: 25rem 0;
       }
 
-      @media screen and (min-width: 43rem) {
-        background-position: 27rem 0;
+      @media screen and (min-width: 49rem) {
+        background-position: 30rem 0;
       }
 
       @media screen and (min-width: 55rem) {
@@ -261,7 +261,7 @@ h1 {
       position: relative;
       margin: 0;
 
-      @media screen and (min-width: 31rem) {
+      @media screen and (min-width: 35rem) {
         margin: 3rem 0 3rem 0;
       }
 
@@ -300,21 +300,21 @@ h1 {
       background-position: 3rem 0rem;
       z-index: -1; // So it doesn't go on top of the text
 
-      @media screen and (min-width: 30rem) {
-        background-position: 15rem 0;
+      @media screen and (min-width: 35rem) {
+        background-position: 19rem 0;
         height: 15rem;
       }
 
       @media screen and (min-width: 40rem) and (orientation: landscape) {
-        background-position: 20rem 0;
+        background-position: 22rem 0;
       }
 
-      @media screen and (min-width: 37rem) {
-        background-position: 18rem 0;
+      @media screen and (min-width: 42rem) {
+        background-position: 25rem 0;
       }
 
-      @media screen and (min-width: 43rem) {
-        background-position: 27rem 0;
+      @media screen and (min-width: 49rem) {
+        background-position: 30rem 0;
       }
 
       @media screen and (min-width: 55rem) {
@@ -327,7 +327,7 @@ h1 {
     position: relative;
     margin: 0 0 3rem 0;
 
-    @media screen and (min-width: 31rem) {
+    @media screen and (min-width: 35rem) {
       margin: 3rem 0 3rem 0;
     }
 
@@ -431,7 +431,7 @@ h1 {
     padding: 0 1rem;
     width: 50%;
 
-    @media screen and (min-width: 31rem) {
+    @media screen and (min-width: 35rem) {
       padding: 0 2rem;
     }
 
